worker_k8s/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: security
  labels:
    app: worker
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
      tier: backend
  template:
    metadata:
      labels:
        app: worker
        tier: backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: worker
          image: abdelrhmanpasha/worker:latest
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "256Mi"
              cpu: "256m"
