worker_k8s/networkPolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: worker-networkpolicy
  namespace: security
spec:
  podSelector:
    matchLabels:
      app: worker
  policyTypes:
  - Egress
  egress:
  - to:
      - podSelector: 
          matchLabels: 
            app: redis
            tier: backend
    ports: 
    - protocol: TCP 
      port: c-redis-port
  - to:
      - podSelector: 
          matchLabels: 
            app: postgres
            tier: backend
    ports: 
    - protocol: TCP
      port: c-db-port
  - to: 
      - namespaceSelector: {}
    ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53 # DNS
